@@ -54,6 +54,7 @@ typedef struct {
 
 typedef struct {
   double last;              /* timestamp from last call */
+  double latest;            /* most recent delta */
   double accum;             /* accumulated time */
   float max;                /* longest time for start/stop pair */
   float min;                /* shortest time for start/stop pair */
